# socket-sim.cpp

./: CMakeLists.txt  README.md  main.cpp
docs/spdlog/: spdlog-usage.md
src/: CMakeLists.txt  logger.cpp  main.cpp  socket_base.cpp  socket_client.cpp  socket_handler.cpp  socket_server.cpp  validate_arg.cpp
src/include/: logger.h  socket_base.h  socket_client.h  socket_handler.h  socket_server.h  validate_arg.h
test/: CMakeLists.txt  socket_client_test.cpp  socket_test.cpp  testMain.h  validate_arg_test.cpp  validate_arg_test.md
